--- a/site/styles/layout/_footer.scss
+++ b/site/styles/layout/_footer.scss
@@ -1,10 +1,7 @@
 footer {
-  display: flex;
-  justify-content: flex-end;
-  padding: 2rem 2rem 2rem 2rem;
-  font-size: .8em;
-  line-height: 2rem;
-  z-index: 49;
-  position: relative;
-  background-color: hsl(var(--color-background-hsl));
+    grid-column: breakout;
+    display: flex;
+    justify-content: flex-end;
+    font-size: var(--font-size-1);
+    margin-top: 1rem;
 }
