--- a/site/styles/layout/_header.scss
+++ b/site/styles/layout/_header.scss
@@ -1,52 +1,47 @@
-body > a:first-child{
-  position: fixed;
-  top: 0;
-  left: 1rem;
-  transform: translateY(-10rem);
-  transition: transform 0.3s ease-in-out;
-  padding: 0 0.5rem;
-  background: var(--backgroundcolor-light);
-  color: var(--foregroundcolor-light);
-  z-index: 999;
-
-  &:focus {
-      transform: translateY(1rem);
-  }
-}
-
 header {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-    
+  grid-column: full-width;
+
+  display: grid;
+  grid-template-columns: inherit;
+
+  z-index: 250;
   background-color: hsl(var(--color-background-hsl));
+  height: var(--head-size);
+  position: sticky;
+  top: 0;
 
-  margin: 2rem 2rem 4rem 2rem;
-  letter-spacing: 0.1em;
+  div {
+      grid-column: breakout;
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
 
-  h2 {
-    margin: 0;
-    font-size: var(--font-size-4);
-    font-weight: 100;
-    white-space:nowrap;
+      h2 {
+          font-size: var(--font-size-4);
+          letter-spacing: 0.1em;
+          font-weight: 100;
+      }
 
-    a {
-      color: hsl(var(--color-dark-hsl));
-    }
-  }
+      nav {
+          display: flex;
+          justify-content: flex-end;
+          flex-direction: row;
+          flex-wrap: wrap;
+          gap: var(--padding);
+          font-size: var(--font-size-3);
+      }
 
-  a {
-    color: hsl(var(--color-hsl) / 0.8);
-    text-decoration: none;
-    border-bottom: solid 1px transparent;
+      a {
 
-    &:hover, &.active {
-      color: hsl(var(--color-dark-hsl));
-      border-bottom: solid 1px hsl(var(--color-hsl) / 0.3);
-    }
-  }
+          color: hsl(var(--color-light-hsl));
+          text-decoration: none;
 
-  span {
-    color: hsl(var(--color-hsl) / 0.5);
+          border-bottom: solid 1px hsl(var(--color-hsl) / 0.1);
+
+          &:hover {
+              color: hsl(var(--color-dark-hsl));
+              border-bottom: solid 1px hsl(var(--color-hsl) / 0.3);
+          }
+      }
   }
 }
